# HRM

./: .gitignore  4-LIFE_AUTONOMOUS_TRACK_COMPLETION.md  4-LIFE_AUTONOMOUS_TRACK_SUMMARY.md  ACHIEVEMENTS_JETSON_20250822.md  ACTIVE_WORK.md  AGENTS.md  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  ARCHITECTURE_INNOVATIONS.md  ARC_AGI2_EVALUATION_RESULTS.md  ARC_PRIZE_2025_STATUS.md  ARC_PRIZE_SUBMISSION_GUIDE.md  AUTONOMOUS_CHECK_SUMMARY.txt  AUTONOMOUS_RESEARCH_PRIORITIES.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMPLETE_FINDINGS_SUMMARY.md  COMPLETE_SYSTEM_SUMMARY.md  COMPREHENSIVE_HRM_SAGE_MAP.md  COORDINATION_RECONCILIATION.md  CUDA_ERROR_DIAGNOSIS.md  DIFFUSION_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  Dockerfile.jetson  Dockerfile.jetson.simple  Dockerfile.vllm  ENGLISH_FIRST_IMPLEMENTATION.md  ENVIRONMENT_COMPLETE.md  ENVIRONMENT_STATUS.md  EXPLORATION_SUMMARY.md  FINAL_STATUS.md  FLASH_ATTENTION_SOLUTION.md  HRM_ATTRIBUTION_ANALYSIS.md  HRM_EXPLAINED.md  HRM_REORGANIZATION_2026-01-26.md  HRM_SAGE_Innovation_Provenance.md  INTEGRATION_STATUS_AND_PATH.md  JETSON_SETUP_GUIDE.md  JETSON_STATUS.md  (+125 more)
.github/: TOPICS.md
archive/: README.md
benchmarks/: baseline_jetson.py
comparison_results/: comparison_report_20251221_165642.json  native_results_20251221_165642.json  sage_results_20251221_165642.json
config/: cfg_pretrain.yaml  jetson_sudoku_demo.yaml
dataset/: README.md
demo_logs/: attention_tick.jsonl  consolidated_memory.jsonl
demos/: full_system_demo.py  language_span_mask_irp.py  orchestrator_demo.py  sleep_cycle_demo.py  vision_latent_irp.py  vision_real_demo.py
docs/: AGENT_ZERO_CONFIRMATION.md  ARCHITECTURE_MASTER.md  INPUT_INVARIANT_OUTPUT_DISCOVERY.md  README.md  VLLM_THOR_RESEARCH_SUMMARY.md  ZERO_BASELINE_DISCOVERY.md  compression_trust_integration.md  tinyvae_compression_trust.md
dropbox/: .gitignore  DROPBOX_INTEGRATION.md  README.md  authenticate.sh  rclone_sync.py  setup_dropbox.sh  setup_folders.sh  setup_rclone.sh  sync_config.json  sync_dropbox.py
entities_and_roles/: ENTITY_MEMORY.md  ENTITY_MEMORY_VS_SIDECAR.md  README.md  SAGE_ENTITIES_AND_DICTIONARIES.md  WEB4_Whitepaper_MarkedUp_with_Intro.md
examples/: hello_sage.py  sage_with_custom_config.py  sage_with_policy.py
forum/: README.md  extended-reasoning-debugging-journey.md  fresh-training-from-scratch.md
gr00t-integration/: .gitignore  IMPLEMENTATION_STEPS.md  README.md  groot_video_capture.py  groot_world_headless.py  groot_world_sim.py  load_groot_full.py  sage_gr00t_adapter.py  test_sage_gr00t_gpu.py
implementation/: COMPILATION_ISSUES.md  CROSSREF_APPENDIX.md  CUDA_MAILBOX_DEBUG_NOTES.md  GPU_MAILBOX.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_README.md  SIGHT_INSIGHT.md  TEST_PLAN.md  english_first_architecture.py  hrm_english_integration.py  research_agent_driver.py  test_gpu_simple.py  test_rtx4090_performance.py
implementation/tiling_mailbox_cuda_pack/: BUILD.md  CMakeLists.txt  mailbox_focus.h
implementation/tiling_mailbox_cuda_pack/src/: mailbox_focus.cu  mailbox_peripheral.cu
implementation/tiling_mailbox_cuda_tests/: CMakeLists.txt  README.md
implementation/tiling_mailbox_cuda_tests/src/: test_ftm.cu  test_pbm.cu
kaggle_submission_package/: .gitignore  ARC_reasoning_analysis.md  README.md  SAGE_UNIFIED_VISION.md  SAGE_cascading_architecture.py  SAGE_cascading_insight.md  V3_INSIGHTS.md  V3_SUMMARY.md  arc-agi_test_challenges.json  claude_analysis_prompts.json  claude_arc_reasoning_analysis.md  claude_batch_solver.py  claude_contextual_solutions.json  claude_contextual_solver.py  claude_predictions.json  claude_real_predictions.json  claude_reasoning_predictions.json  claude_reasoning_predictions.py  claude_reasoning_training_data.json  claude_solve_tasks_directly.py  claude_v3_training_data.json  claude_visual_solver.py  distill_claude_to_sage.py  faithful_submission.json  generate_submission.py  intensive_distillation.py  kaggle_notebook_fixed.ipynb  kaggle_requirements.txt  kaggle_submission.py  kaggle_submission_V1.py  kaggle_submission_real.py  kaggle_submission_v3.py  model_submission.json  pattern_analysis.json  prepare_v3_training.py  (+8 more)
sage-core/: Cargo.toml  README.md  test_sage_core.py
sage-core/src/: lib.rs  r6.rs  t3.rs
(+3909 files in other folders)
