[package]
name = "sage-core"
version = "0.1.0"
edition = "2021"
authors = ["SAGE Project <sage@web4.io>"]
description = "Rust core for SAGE cognition kernel - R6 framework and T3 trust tensors"
license = "MIT"

[lib]
name = "sage_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
